src/usr/local/emhttp/plugins/file.activity/assets/style.css
button.select2-selection__choice__remove,
button.dt-datetime-button,
button.dtcc-button {
    min-width: 0;
    max-width: none;
    margin: 0 0 0 0;
    border: none;
    background: none;
}

div.dtcc-list * {
    min-width: 0;
    max-width: none;
    margin: 0 0 0 0;
}

.dt-length select {
    background-color: transparent;
    border-top: none !important;
    border-left: none !important;
    border-right: none !important;
    border-bottom: 1px solid var(--input-border-color) !important;
    border-radius: 0 !important;
}

button.dtcc-list-selectAll,
button.dtcc-list-selectNone,
button.fg-button {
    min-width: 0;
    max-width: none;
    margin: 0 0 0 0;
    border: none;
    background: none;
    letter-spacing: initial;
}

div.flatpickr-calendar {
    font-size: 1.2rem;
}

span.dtcc-button-icon svg {
    color: white;
    background-color: gray;
    padding: 2px 2px 2px 2px;
}

div.dt-button-info {
    color: black;
}

input.flatpickr-input {
    width: 150px;
}

.overflow-anywhere {
    overflow-wrap: anywhere;
    white-space: normal;
}

button.exclusion-button {
    margin-bottom: 2px;
    margin-top: 2px;
}

input.regex-error {
    border: 1px solid red;
}

i.regex-error {
    color: red;
    font-size: 16px;
    margin-left: -18px;
    margin-right: 18px;
    display: none;
}

div.dt-length {
    white-space: pre;
}

:root {
  --dt-row-selected: 13, 110, 253;
  --dt-row-selected-text: 255, 255, 255;
  --dt-row-selected-link: 228, 228, 228;
  --dt-row-stripe: 0, 0, 0;
  --dt-row-hover: 0, 0, 0;
  --dt-column-ordering: 0, 0, 0;
  --dt-header-align-items: center;
  --dt-header-vertical-align: middle;
  --dt-html-background: white;
  --dt-row-hover-alpha: 0.035;
  --dt-row-stripe-alpha: 0.1;
  --dt-column-ordering-alpha: 0.019;
  --dt-row-selected-stripe-alpha: 0.923;
  --dt-row-selected-column-ordering-alpha: 0.919;
}
:root.dark {
  --dt-html-background: transparent;
}
html.dark {
  --dt-row-hover: 255, 255, 255;
  --dt-row-stripe: 128, 128, 128;
  --dt-column-ordering: 255, 255, 255;
}

